# TinyORM-tom

./: .env.example  .env.mingw.example  .env.unix.example  .env.win32.example  .gitignore  .qmake.conf.example  CMakeLists.txt  README.md  main.cpp  tom.pro  vcpkg.json
